--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator BMI</title>
     <link rel="stylesheet" href="CSS\styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <script src="JS\script.js"></script>
 </head>
 <body>
@@ -34,14 +35,14 @@
             </div>
             
             <h2 class="title-desc">Mengapa penting untuk mengetahui BMI?</h2>
-            <p>(Indeks Massa Tubuh) atau BMI adalah cara sederhana untuk memeriksa risiko penyakit terkait lemak tubuh Anda. Hidup dengan kelebihan berat badan atau obesitas dikaitkan dengan peningkatan risiko kematian dan penyakit atau kondisi lainnya. Umumnya, semakin tinggi BMI Anda, semakin besar risiko terkena penyakit kronis terkait obesitas atau penyakit lainnya.</p>
+            <p class="p1">(Indeks Massa Tubuh) atau BMI adalah cara sederhana untuk memeriksa risiko penyakit terkait lemak tubuh Anda. Hidup dengan kelebihan berat badan atau obesitas dikaitkan dengan peningkatan risiko kematian dan penyakit atau kondisi lainnya. Umumnya, semakin tinggi BMI Anda, semakin besar risiko terkena penyakit kronis terkait obesitas atau penyakit lainnya.</p>
 
-            <p>Kalkulator ini akan memberi Anda gambaran tentang perbandingan berat badan Anda dengan nilai umum. Indeks Massa Tubuh (atau BMI) dihitung sebagai berat badan Anda (dalam kilogram) dibagi dengan kuadrat tinggi badan Anda (dalam meter) atau BMI = Kg/M².</p>
+            <p class="p1">Kalkulator ini akan memberi Anda gambaran tentang perbandingan berat badan Anda dengan nilai umum. Indeks Massa Tubuh (atau BMI) dihitung sebagai berat badan Anda (dalam kilogram) dibagi dengan kuadrat tinggi badan Anda (dalam meter) atau BMI = Kg/M².</p>
 
             <h2 class="title-desc">Keterbatasan BMI</h2>
-            <p>BMI adalah pengukuran yang sederhana dan objektif, tetapi dapat menyesatkan dalam kasus tertentu dan untuk beberapa kelompok orang. Penelitian telah menunjukkan bahwa BMI kurang akurat dalam memprediksi risiko penyakit pada orang yang lebih tua, atlet, orang yang tinggi atau pendek, dan mereka yang memiliki tipe tubuh lebih berotot. Misalnya, atlet atau binaragawan memiliki lebih banyak otot dan berat badan lebih banyak, yang membuat BMI mereka lebih tinggi.</p>
+            <p class="p1">BMI adalah pengukuran yang sederhana dan objektif, tetapi dapat menyesatkan dalam kasus tertentu dan untuk beberapa kelompok orang. Penelitian telah menunjukkan bahwa BMI kurang akurat dalam memprediksi risiko penyakit pada orang yang lebih tua, atlet, orang yang tinggi atau pendek, dan mereka yang memiliki tipe tubuh lebih berotot. Misalnya, atlet atau binaragawan memiliki lebih banyak otot dan berat badan lebih banyak, yang membuat BMI mereka lebih tinggi.</p>
 
-            <p>Penting untuk diingat bahwa hidup dengan obesitas tidak selalu berarti Anda tidak sehat, sama seperti memiliki berat badan 'normal' tidak berarti Anda sehat. BMI Anda tidak menentukan Anda, tetapi mengetahui dan memahami BMI Anda dapat menjadi alat yang ampuh untuk bertanggung jawab atas kesehatan Anda sendiri.</p>
+            <p class="p1">Penting untuk diingat bahwa hidup dengan obesitas tidak selalu berarti Anda tidak sehat, sama seperti memiliki berat badan 'normal' tidak berarti Anda sehat. BMI Anda tidak menentukan Anda, tetapi mengetahui dan memahami BMI Anda dapat menjadi alat yang ampuh untuk bertanggung jawab atas kesehatan Anda sendiri.</p>
         </div>
         
         <div class="result-section">
@@ -111,10 +112,9 @@
 
 <footer>
     <div class="footer">
-        made by jeeaa
-        <br>
-        <a href="" target="_blank">
+        <a href="https://www.instagram.com/je__eeea" target="_blank" class="instagram-link">
             <i class="ri-instagram-line"></i>
+            jeeea
         </a>
     </div>
 </footer>
